--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "bootstrap": "^4.3.1",
+    "console-log-html": "^2.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
