--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kurento-signal-app",
+  "name": "kurento-one2many",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
